Added quantity into product_edit.ejs and a product disappeared after trying to save changes to quantity. Commiting so that I can revert back to first commit

--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -17,9 +17,11 @@
         $<%= product.price %> - <%= product.name %>
       </h2>
       <p>
+        Quantity left: <%= product.quantity %>
+      </p>
+      <p>
         <%= product.description %>
       </p>
-
       <p>
         <a href="/products/<%= product.id %>/edit">
           edit
