--- a/views/product_edit.ejs
+++ b/views/product_edit.ejs
@@ -26,6 +26,9 @@
           Name: <input type="text" name="name" value="<%= product.name %>">
         </div>
         <div>
+          Quantity Left: <input type="text" name="name" value="<%= product.quantity %>">
+        </div>
+        <div>
           <p>
             Description:
           </p>
